feat: Implement enhacements and new functionality
